Step 10 - Descritor do App - MANIFEST.JSON

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,2 +1,8 @@
+#App Descriptor
+appTitle=Olá Camarada
+appDescription=Um simples tutorial que explica os conceitos mais importantes do UI5
+
+#Hello Panel
 showHelloButtonText=Diga um Salve
 helloMsg=Salve {0}
+
