--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -5,4 +5,6 @@ appDescription=Um simples tutorial que explica os conceitos mais importantes do 
 #Hello Panel
 showHelloButtonText=Diga um Salve
 helloMsg=Salve {0}
+homePageTitle=Beijo do Gordo
+helloPanelTitle=Olá Prostiranha
 
