Step 16 - Dialogs e Fragmentos

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -7,4 +7,5 @@ showHelloButtonText=Diga um Salve
 helloMsg=Salve {0}
 homePageTitle=Beijo do Gordo
 helloPanelTitle=Olá Prostiranha
+openDialogButtonText=Manda um salve com Dialog
 
