Step 17 - Fragment Callback

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -8,4 +8,5 @@ helloMsg=Salve {0}
 homePageTitle=Beijo do Gordo
 helloPanelTitle=Olá Prostiranha
 openDialogButtonText=Manda um salve com Dialog
+dialogCloseButtonText=Ok
 
