Step 20 - Data Types

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -10,3 +10,6 @@ helloPanelTitle=Olá Prostiranha
 openDialogButtonText=Manda um salve com Dialog
 dialogCloseButtonText=Ok
 
+# Invoice List
+invoiceListTitle=Faturas
+
