Step 22 - Custom Formatters

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -12,4 +12,7 @@ dialogCloseButtonText=Ok
 
 # Invoice List
 invoiceListTitle=Faturas
+invoiceStatusA=Novo
+invoiceStatusB=Em Progresso
+invoiceStatusC=Concluído
 
