--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -15,6 +15,11 @@ invoiceListTitle=Faturas
 invoiceStatusA=Novo
 invoiceStatusB=Em Progresso
 invoiceStatusC=Concluído
+columnQuantity=Quantity
+columnName=Name
+columnSupplier=Supplier
+columnStatus=Status
+columnPrice=Price
 
 # Detail Page
 detailPageTitle=Tutorial - Detalhes
