--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -24,6 +24,8 @@ columnPrice=Price
 # Detail Page
 detailPageTitle=Tutorial - Detalhes
 ratingConfirmation=You have rated this product with {0} stars
+dateTitle=Order date
+quantityTitle=Quantity
 
 # Product Rating
 productRatingLabelInitial=Please rate this product
